force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/ccrz__E_ProductInventoryItem__c.object-meta.xml
<CustomObject>
    <description>Maps product to available quantity</description>
    <label>CC Product Inventory Item</label>
    <nameField>
        <label>ProductInventoryItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Product Inventory Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>