force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__AvailabilityMessage__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AvailabilityMessage__c</fullName>
    <description>Availability Messages such as &quot;Available&quot; or &quot;BackOrder&quot;.</description>
    <label>Availability Message</label>
    <type>TextArea</type>
</CustomField>