force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__InventoryLocationCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InventoryLocationCode__c</fullName>
    <description>Location code for inventory warehouse.</description>
    <label>Inventory Location code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>