force-app/main/default/objects/ccrz__E_ProductInventoryItem__c/fields/ccrz__QtyAvailable__c.field-meta.xml
<CustomField>
    <fullName>ccrz__QtyAvailable__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Numeric quantity corresponding to the inventory level</description>
    <label>Qty Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>